Fixed tv show title alignment bug

--- a/components/home_search/HomeSearchResults.module.css
+++ b/components/home_search/HomeSearchResults.module.css
@@ -25,17 +25,25 @@
 }
 .showName,
 .showYear {
-	font-size: 10px;
 	margin-top: 5px;
 	width: 100%;
-	max-height: 5.5ex;
 	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
 }
 .topResultShow .showName {
-	margin-top: 10px;
 	font-size: 14px;
 	font-weight: bold;
 }
-.restOfShows {
+.shows {
 	display: flex;
+	align-items: flex-end;
+}
+.showDetails {
+	font-size: 10px;
+	height: 15ex;
+	overflow: hidden;
+	display: grid;
+	grid-template-rows: auto minmax(min-content, 1fr);
 }
